// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta renders with mandatory props 1`] = `
<DocumentFragment>
  .emotion-81 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-81 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:768px) {
  .emotion-81 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-81 {
    padding: 0 12px;
    margin-top: 24px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width:767px) {
  .emotion-80 {
    margin-bottom: 48px;
  }
}

@media screen and (min-width:768px) {
  .emotion-80 {
    margin-bottom: 64px;
  }
}

.emotion-78 {
  margin-bottom: 24px;
}

@media screen {
  .emotion-37 {
    display: none;
  }
}

@media screen and (min-width:480px) {
  .emotion-37 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .emotion-37 {
    display: none;
  }
}

@media screen and (min-width:1024px) {
  .emotion-37 {
    display: none;
  }
}

@media screen and (min-width:1440px) {
  .emotion-37 {
    display: block;
  }
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-32px/2);
  margin-right: calc(-32px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(32px/2);
  margin-right: calc(32px/2);
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-12px/2);
  margin-bottom: calc(-12px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(12px/2);
  margin-bottom: calc(12px/2);
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
}

.emotion-6 svg {
  width: 16px;
  height: 16px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(32px/2);
  margin-right: calc(32px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.emotion-11 {
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
}

.emotion-22 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-22 svg {
  fill: #0a68c1;
}

.emotion-22:hover:not(:disabled) {
  color: #02509b;
}

.emotion-22:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-22:active:not(:disabled) {
  color: #01396e;
}

.emotion-22:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-22:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-22:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-22 {
    vertical-align: text-bottom;
  }
}

.emotion-16 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-16::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4277777777777778em;
}

.emotion-16::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4902777777777778em;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-16px/2);
  margin-right: calc(-16px/2);
}

.emotion-34 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
}

.emotion-32 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-32 svg {
  width: 24px;
  height: 24px;
}

.emotion-32 svg {
  fill: #2e2e2e;
}

.emotion-32:hover:not(:disabled) {
  background-color: #fafafa;
  border-color: #2e2e2e;
}

.emotion-32:active:not(:disabled) {
  background-color: #f0f0f0;
  border-color: #0a0a0a;
}

.emotion-32:disabled {
  border-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-32:disabled svg {
  fill: #c0c0c0;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-27 {
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

@media screen {
  .emotion-77 {
    display: block;
  }
}

@media screen and (min-width:480px) {
  .emotion-77 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .emotion-77 {
    display: block;
  }
}

@media screen and (min-width:1024px) {
  .emotion-77 {
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-77 {
    display: none;
  }
}

.emotion-76 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-79 {
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-18 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-18.emotion-18 {
  width: 16px;
  height: 16px;
}

<div
    class="emotion-81"
  >
    <div
      class="emotion-80"
    >
      <div
        class="emotion-78"
      >
        <div
          class="emotion-37"
        >
          <div
            class="emotion-36"
          >
            <div
              class="emotion-26"
            >
              <div
                class="emotion-10"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-2"
                  >
                    <section
                      class="emotion-1"
                    >
                      <h1
                        class="nk-headline-heading emotion-0"
                      >
                        Status
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-2"
                  >
                    <div
                      class="emotion-7"
                    >
                      <div
                        class="emotion-6"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-5"
                        >
                          <div
                            class="emotion-4"
                          >
                            <span
                              class="emotion-3"
                            >
                              Supported
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-12"
              >
                <hr
                  aria-hidden="true"
                  class="emotion-11"
                  data-testid="divider"
                />
              </div>
              <div
                class="emotion-10"
              >
                <div
                  class="emotion-24"
                >
                  <div
                    class="emotion-15"
                  >
                    <section
                      class="emotion-1"
                    >
                      <h1
                        class="nk-headline-heading emotion-0"
                      >
                        Introduced
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-15"
                  >
                    <a
                      class="emotion-22"
                      href="http://localhost:8081"
                    >
                      <span
                        class="emotion-21"
                      >
                        <span
                          class="emotion-4"
                        >
                          <span
                            class="emotion-16"
                          >
                            v0.1
                          </span>
                        </span>
                        <span
                          class="emotion-4"
                        >
                          <svg
                            class="emotion-18 emotion-19"
                            fill="currentColor"
                            focusable="false"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              External link
                            </title>
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-35"
            >
              <div
                class="emotion-34"
              >
                <div
                  class="emotion-7"
                >
                  <a
                    class="emotion-32"
                    data-testid="buttonLink"
                    href="https://github.com/newscorp-ghfb/ncu-newskit"
                  >
                    <div
                      class="emotion-31"
                    >
                      <div
                        class="emotion-28"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-27"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                            fill-rule="nonzero"
                          />
                        </svg>
                      </div>
                      <div
                        class="emotion-28"
                      >
                        <span
                          class="emotion-3"
                        >
                          View source code
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-77"
        >
          <div
            class="emotion-76"
          >
            <div
              class="emotion-15"
            >
              <div
                class="emotion-26"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-9"
                  >
                    <div
                      class="emotion-2"
                    >
                      <section
                        class="emotion-1"
                      >
                        <h1
                          class="nk-headline-heading emotion-0"
                        >
                          Status
                        </h1>
                      </section>
                    </div>
                    <div
                      class="emotion-2"
                    >
                      <div
                        class="emotion-7"
                      >
                        <div
                          class="emotion-6"
                          data-testid="flag"
                        >
                          <div
                            class="emotion-5"
                          >
                            <div
                              class="emotion-4"
                            >
                              <span
                                class="emotion-3"
                              >
                                Supported
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-12"
                >
                  <hr
                    aria-hidden="true"
                    class="emotion-11"
                    data-testid="divider"
                  />
                </div>
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-24"
                  >
                    <div
                      class="emotion-15"
                    >
                      <section
                        class="emotion-1"
                      >
                        <h1
                          class="nk-headline-heading emotion-0"
                        >
                          Introduced
                        </h1>
                      </section>
                    </div>
                    <div
                      class="emotion-15"
                    >
                      <a
                        class="emotion-22"
                        href="http://localhost:8081"
                      >
                        <span
                          class="emotion-21"
                        >
                          <span
                            class="emotion-4"
                          >
                            <span
                              class="emotion-16"
                            >
                              v0.1
                            </span>
                          </span>
                          <span
                            class="emotion-4"
                          >
                            <svg
                              class="emotion-18 emotion-19"
                              fill="currentColor"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <title>
                                External link
                              </title>
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-15"
            >
              <div
                class="emotion-35"
              >
                <div
                  class="emotion-34"
                >
                  <div
                    class="emotion-7"
                  >
                    <button
                      class="emotion-32"
                      data-testid="button"
                      type="button"
                    >
                      <div
                        class="emotion-31"
                      >
                        <div
                          class="emotion-28"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-27"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                              fill-rule="nonzero"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-28"
                        >
                          <span
                            class="emotion-3"
                          >
                            View source code
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        aria-hidden="true"
        class="emotion-79"
        data-testid="divider"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Meta renders with mandatory props and figma button 1`] = `
<DocumentFragment>
  .emotion-97 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-97 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:768px) {
  .emotion-97 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-97 {
    padding: 0 12px;
    margin-top: 24px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width:767px) {
  .emotion-96 {
    margin-bottom: 48px;
  }
}

@media screen and (min-width:768px) {
  .emotion-96 {
    margin-bottom: 64px;
  }
}

.emotion-94 {
  margin-bottom: 24px;
}

@media screen {
  .emotion-45 {
    display: none;
  }
}

@media screen and (min-width:480px) {
  .emotion-45 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .emotion-45 {
    display: none;
  }
}

@media screen and (min-width:1024px) {
  .emotion-45 {
    display: none;
  }
}

@media screen and (min-width:1440px) {
  .emotion-45 {
    display: block;
  }
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-32px/2);
  margin-right: calc(-32px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(32px/2);
  margin-right: calc(32px/2);
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-12px/2);
  margin-bottom: calc(-12px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(12px/2);
  margin-bottom: calc(12px/2);
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 40px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
}

.emotion-6 svg {
  width: 16px;
  height: 16px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(32px/2);
  margin-right: calc(32px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.emotion-11 {
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
}

.emotion-22 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-22 svg {
  fill: #0a68c1;
}

.emotion-22:hover:not(:disabled) {
  color: #02509b;
}

.emotion-22:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-22:active:not(:disabled) {
  color: #01396e;
}

.emotion-22:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-22:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-22:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-22 {
    vertical-align: text-bottom;
  }
}

.emotion-16 {
  margin: 0;
  padding: 1px 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-16::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4277777777777778em;
}

.emotion-16::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4902777777777778em;
}

.emotion-43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-16px/2);
  margin-right: calc(-16px/2);
}

.emotion-34 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
}

.emotion-32 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-32 svg {
  width: 24px;
  height: 24px;
}

.emotion-32 svg {
  fill: #2e2e2e;
}

.emotion-32:hover:not(:disabled) {
  background-color: #fafafa;
  border-color: #2e2e2e;
}

.emotion-32:active:not(:disabled) {
  background-color: #f0f0f0;
  border-color: #0a0a0a;
}

.emotion-32:disabled {
  border-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-32:disabled svg {
  fill: #c0c0c0;
}

.emotion-31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-28 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-27 {
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

@media screen {
  .emotion-93 {
    display: block;
  }
}

@media screen and (min-width:480px) {
  .emotion-93 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .emotion-93 {
    display: block;
  }
}

@media screen and (min-width:1024px) {
  .emotion-93 {
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-93 {
    display: none;
  }
}

.emotion-92 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-95 {
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-18 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-18.emotion-18 {
  width: 16px;
  height: 16px;
}

.emotion-40 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 176px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  border-radius: 8px;
  color: #2e2e2e;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-40 svg {
  width: 24px;
  height: 24px;
}

.emotion-40 svg {
  fill: #2e2e2e;
}

.emotion-40:hover:not(:disabled) {
  background-color: #fafafa;
  border-color: #2e2e2e;
}

.emotion-40:active:not(:disabled) {
  background-color: #f0f0f0;
  border-color: #0a0a0a;
}

.emotion-40:disabled {
  border-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-40:disabled svg {
  fill: #c0c0c0;
}

<div
    class="emotion-97"
  >
    <div
      class="emotion-96"
    >
      <div
        class="emotion-94"
      >
        <div
          class="emotion-45"
        >
          <div
            class="emotion-44"
          >
            <div
              class="emotion-26"
            >
              <div
                class="emotion-10"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-2"
                  >
                    <section
                      class="emotion-1"
                    >
                      <h1
                        class="nk-headline-heading emotion-0"
                      >
                        Status
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-2"
                  >
                    <div
                      class="emotion-7"
                    >
                      <div
                        class="emotion-6"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-5"
                        >
                          <div
                            class="emotion-4"
                          >
                            <span
                              class="emotion-3"
                            >
                              Supported
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-12"
              >
                <hr
                  aria-hidden="true"
                  class="emotion-11"
                  data-testid="divider"
                />
              </div>
              <div
                class="emotion-10"
              >
                <div
                  class="emotion-24"
                >
                  <div
                    class="emotion-15"
                  >
                    <section
                      class="emotion-1"
                    >
                      <h1
                        class="nk-headline-heading emotion-0"
                      >
                        Introduced
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-15"
                  >
                    <a
                      class="emotion-22"
                      href="http://localhost:8081"
                    >
                      <span
                        class="emotion-21"
                      >
                        <span
                          class="emotion-4"
                        >
                          <span
                            class="emotion-16"
                          >
                            v0.1
                          </span>
                        </span>
                        <span
                          class="emotion-4"
                        >
                          <svg
                            class="emotion-18 emotion-19"
                            fill="currentColor"
                            focusable="false"
                            role="img"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <title>
                              External link
                            </title>
                            <path
                              d="M0 0h24v24H0z"
                              fill="none"
                            />
                            <path
                              d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-43"
            >
              <div
                class="emotion-34"
              >
                <div
                  class="emotion-7"
                >
                  <a
                    class="emotion-32"
                    data-testid="buttonLink"
                    href="https://github.com/newscorp-ghfb/ncu-newskit"
                  >
                    <div
                      class="emotion-31"
                    >
                      <div
                        class="emotion-28"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-27"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                            fill-rule="nonzero"
                          />
                        </svg>
                      </div>
                      <div
                        class="emotion-28"
                      >
                        <span
                          class="emotion-3"
                        >
                          View source code
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
              <div
                class="emotion-34"
              >
                <div
                  class="emotion-7"
                >
                  <a
                    class="emotion-40"
                    data-testid="buttonLink"
                    href="https://github.com/newscorp-ghfb/ncu-newskit"
                  >
                    <div
                      class="emotion-31"
                    >
                      <div
                        class="emotion-28"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-27"
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12.3333 12C12.3333 11.0275 12.7196 10.0949 13.4073 9.40729C14.0949 8.71965 15.0275 8.33334 16 8.33334C16.9724 8.33334 17.9051 8.71965 18.5927 9.40729C19.2803 10.0949 19.6666 11.0275 19.6666 12C19.6666 12.9725 19.2803 13.9051 18.5927 14.5927C17.9051 15.2804 16.9724 15.6667 16 15.6667C15.0275 15.6667 14.0949 15.2804 13.4073 14.5927C12.7196 13.9051 12.3333 12.9725 12.3333 12V12Z"
                            fill="#1ABCFE"
                          />
                          <path
                            d="M5 19.3333C5 18.3609 5.38631 17.4282 6.07394 16.7406C6.76158 16.053 7.69421 15.6667 8.66667 15.6667H12.3333V19.3333C12.3333 20.3058 11.947 21.2384 11.2594 21.926C10.5718 22.6137 9.63913 23 8.66667 23C7.69421 23 6.76158 22.6137 6.07394 21.926C5.38631 21.2384 5 20.3058 5 19.3333V19.3333Z"
                            fill="#0ACF83"
                          />
                          <path
                            d="M12.3333 1V8.33333H16C16.9724 8.33333 17.9051 7.94703 18.5927 7.25939C19.2803 6.57176 19.6666 5.63913 19.6666 4.66667C19.6666 3.69421 19.2803 2.76158 18.5927 2.07394C17.9051 1.38631 16.9724 1 16 1L12.3333 1Z"
                            fill="#FF7262"
                          />
                          <path
                            d="M5 4.66667C5 5.63913 5.38631 6.57176 6.07394 7.25939C6.76158 7.94703 7.69421 8.33333 8.66667 8.33333H12.3333V1H8.66667C7.69421 1 6.76158 1.38631 6.07394 2.07394C5.38631 2.76158 5 3.69421 5 4.66667V4.66667Z"
                            fill="#F24E1E"
                          />
                          <path
                            d="M5 12C5 12.9725 5.38631 13.9051 6.07394 14.5927C6.76158 15.2804 7.69421 15.6667 8.66667 15.6667H12.3333V8.33334H8.66667C7.69421 8.33334 6.76158 8.71965 6.07394 9.40729C5.38631 10.0949 5 11.0275 5 12V12Z"
                            fill="#A259FF"
                          />
                        </svg>
                      </div>
                      <div
                        class="emotion-28"
                      >
                        <span
                          class="emotion-3"
                        >
                          View Design
                        </span>
                      </div>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-93"
        >
          <div
            class="emotion-92"
          >
            <div
              class="emotion-15"
            >
              <div
                class="emotion-26"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-9"
                  >
                    <div
                      class="emotion-2"
                    >
                      <section
                        class="emotion-1"
                      >
                        <h1
                          class="nk-headline-heading emotion-0"
                        >
                          Status
                        </h1>
                      </section>
                    </div>
                    <div
                      class="emotion-2"
                    >
                      <div
                        class="emotion-7"
                      >
                        <div
                          class="emotion-6"
                          data-testid="flag"
                        >
                          <div
                            class="emotion-5"
                          >
                            <div
                              class="emotion-4"
                            >
                              <span
                                class="emotion-3"
                              >
                                Supported
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="emotion-12"
                >
                  <hr
                    aria-hidden="true"
                    class="emotion-11"
                    data-testid="divider"
                  />
                </div>
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-24"
                  >
                    <div
                      class="emotion-15"
                    >
                      <section
                        class="emotion-1"
                      >
                        <h1
                          class="nk-headline-heading emotion-0"
                        >
                          Introduced
                        </h1>
                      </section>
                    </div>
                    <div
                      class="emotion-15"
                    >
                      <a
                        class="emotion-22"
                        href="http://localhost:8081"
                      >
                        <span
                          class="emotion-21"
                        >
                          <span
                            class="emotion-4"
                          >
                            <span
                              class="emotion-16"
                            >
                              v0.1
                            </span>
                          </span>
                          <span
                            class="emotion-4"
                          >
                            <svg
                              class="emotion-18 emotion-19"
                              fill="currentColor"
                              focusable="false"
                              role="img"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <title>
                                External link
                              </title>
                              <path
                                d="M0 0h24v24H0z"
                                fill="none"
                              />
                              <path
                                d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-15"
            >
              <div
                class="emotion-43"
              >
                <div
                  class="emotion-34"
                >
                  <div
                    class="emotion-7"
                  >
                    <button
                      class="emotion-32"
                      data-testid="button"
                      type="button"
                    >
                      <div
                        class="emotion-31"
                      >
                        <div
                          class="emotion-28"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-27"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                              fill-rule="nonzero"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-28"
                        >
                          <span
                            class="emotion-3"
                          >
                            View source code
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-34"
                >
                  <div
                    class="emotion-7"
                  >
                    <a
                      class="emotion-40"
                      data-testid="buttonLink"
                      href="https://github.com/newscorp-ghfb/ncu-newskit"
                    >
                      <div
                        class="emotion-31"
                      >
                        <div
                          class="emotion-28"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-27"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M12.3333 12C12.3333 11.0275 12.7196 10.0949 13.4073 9.40729C14.0949 8.71965 15.0275 8.33334 16 8.33334C16.9724 8.33334 17.9051 8.71965 18.5927 9.40729C19.2803 10.0949 19.6666 11.0275 19.6666 12C19.6666 12.9725 19.2803 13.9051 18.5927 14.5927C17.9051 15.2804 16.9724 15.6667 16 15.6667C15.0275 15.6667 14.0949 15.2804 13.4073 14.5927C12.7196 13.9051 12.3333 12.9725 12.3333 12V12Z"
                              fill="#1ABCFE"
                            />
                            <path
                              d="M5 19.3333C5 18.3609 5.38631 17.4282 6.07394 16.7406C6.76158 16.053 7.69421 15.6667 8.66667 15.6667H12.3333V19.3333C12.3333 20.3058 11.947 21.2384 11.2594 21.926C10.5718 22.6137 9.63913 23 8.66667 23C7.69421 23 6.76158 22.6137 6.07394 21.926C5.38631 21.2384 5 20.3058 5 19.3333V19.3333Z"
                              fill="#0ACF83"
                            />
                            <path
                              d="M12.3333 1V8.33333H16C16.9724 8.33333 17.9051 7.94703 18.5927 7.25939C19.2803 6.57176 19.6666 5.63913 19.6666 4.66667C19.6666 3.69421 19.2803 2.76158 18.5927 2.07394C17.9051 1.38631 16.9724 1 16 1L12.3333 1Z"
                              fill="#FF7262"
                            />
                            <path
                              d="M5 4.66667C5 5.63913 5.38631 6.57176 6.07394 7.25939C6.76158 7.94703 7.69421 8.33333 8.66667 8.33333H12.3333V1H8.66667C7.69421 1 6.76158 1.38631 6.07394 2.07394C5.38631 2.76158 5 3.69421 5 4.66667V4.66667Z"
                              fill="#F24E1E"
                            />
                            <path
                              d="M5 12C5 12.9725 5.38631 13.9051 6.07394 14.5927C6.76158 15.2804 7.69421 15.6667 8.66667 15.6667H12.3333V8.33334H8.66667C7.69421 8.33334 6.76158 8.71965 6.07394 9.40729C5.38631 10.0949 5 11.0275 5 12V12Z"
                              fill="#A259FF"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-28"
                        >
                          <span
                            class="emotion-3"
                          >
                            View Design
                          </span>
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        aria-hidden="true"
        class="emotion-95"
        data-testid="divider"
      />
    </div>
  </div>
</DocumentFragment>
`;
